[package]
name = "clevis-pin-tpm2"
version = "0.3.0"
description = "Clevis TPM2 PIN with policy support"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"
homepage = "https://github.com/fedora-iot/clevis-pin-tpm2"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tss-esapi = "5.0"
serde = "1.0"
biscuit = "0.5.0"
serde_json = "1.0"
base64 = "0.12.1"
atty = "0.2.14"
tpm2-policy = { version = "0.4.0", path = "../rust-tpm2-policy" }
