[package]
name = "clevis-pin-tpm2"
version = "0.5.2"
description = "Clevis TPM2 PIN with policy support"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"
homepage = "https://github.com/fedora-iot/clevis-pin-tpm2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tss-esapi = "7.0.0"
serde = "1.0"
josekit = "0.7.4"
serde_json = "1.0"
base64 = "0.12.1"
atty = "0.2.14"
tpm2-policy = "0.6.0"
